<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorGreyDark"
    android:choiceMode="singleChoice"
    android:padding="16dp"
    android:id="@+id/left_drawer">

    <RelativeLayout
        android:id="@+id/profile_info_btn"
        style="@style/button_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:src="@mipmap/ic_right_arrow" />

        <TextView
            android:id="@+id/textView2"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_info" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/all_locationds_btn"
        style="@style/button_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_btn">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:src="@mipmap/ic_right_arrow" />

        <TextView
            android:id="@+id/textView3"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/all_saved_locations" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profile_info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/all_locationds_btn">

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

        <TextView
            android:id="@+id/locations_saved"
            style="@style/infoTextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/locations_saved" />

        <TextView
            android:id="@+id/pictures_taken"
            style="@style/infoTextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total_pictures_taken"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
